--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -1015,3 +1015,22 @@ but these would not:-
 update(xy[]) <- 1
 xyz[1, 2] <- xyz[1, 2] + 1
 ```
+
+# `E2019`
+
+The `length`, `ncol` and `nrow` functions take as their argument a whole array, matrix, or higher-order structure, without brackets or indexing.
+
+So 
+```
+dim(x) <- c(5,5)
+y <- length(x)
+```
+
+is valid, but 
+
+```
+y <- length(x[, 1]
+y <- length(x[])
+```
+
+are both invalid.
