--- a/vignettes/functions.Rmd
+++ b/vignettes/functions.Rmd
@@ -174,6 +174,14 @@ dim(ay) <- c(nr, nc)
 
 where `y` is defined to be a 1-dimensional array of length 10 and `ay` is a matrix (2-dimensional array) with `nr` rows and `nc` columns.  The extents of arrays must be determined at the **first** system initialisation, and this is checked during parse.
 
+If you have different arrays with the same dimensons, you can also use `dim()` on the right-hand side, to copy from an array you have set the dimensions of elsewhere. For example:-
+
+```r
+dim(x1) <- c(5,3,2)
+dim(x2) <- dim(x1)
+dim(x3) <- dim(x1)
+```
+
 ## Special functions for arrays
 
 We provide several functions for retrieving dimensions from an array
