--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -1088,3 +1088,12 @@ are both invalid.
 
 `output()` was used (on lhs) within a discrete-time system.  You can only use `output()` within systems that involve `deriv()` as it provides a way of computing variables for which you do not have derivatives.  If you are writing a discrete-time system, you should use `update()` with a corresponding `initial()` statement.
 
+
+# `E2021`
+
+You have tried to set the dimensions of the same variable more than once. For example:
+
+```
+dim(a, b) <- 2
+dim(b, c) <- 3
+```
