Error if arrays accessed without index

--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -1097,6 +1097,17 @@ You have tried to set the dimensions of the same variable more than once. For ex
 dim(a, b) <- 2
 dim(b, c) <- 3
 
+# `E2022`
+
+Trying to access an array without using square bracket indexes.  For example if you write:
+
+```r
+dim(b) <- 10
+a[] <- b
+```
+
+you would see this error, as you should have used `b[i]` on the right hand side (*probably!*; you might have meant `a[] <- b[1]`, too).
+
 # `E3001`
 
 An array access would be out of bounds.  This error is thrown where your code would result in you reading or writing out of bounds on an array (or a dimension of an array).  Currently, we throw this error if we are certain that your access is invalid. For example, we would error if your code contains:
