--- a/vignettes/fitting.Rmd
+++ b/vignettes/fitting.Rmd
@@ -15,9 +15,13 @@ knitr::opts_chunk$set(
 set.seed(1)
 ```
 
-**WARNING**: The concepts here are stable, but some of the interface will change, in particular function names.
-
 With a dynamical model we can simulate forwards in time and see how a system might change over time, given a set of parameters.  If we have a time series data set though, we can go a step further and find parameters consistent with the data.  This vignette gives an introduction to the approaches to fitting to data available for `odin2` models.  This support largely derives from the [`monty`](https://mrc-ide.github.io/monty) and [`dust2`](https://mrc-ide.github.io/dust2) packages and we will refer the reader to their documentation where further detail is on offer.
+
+```{r}
+library(odin2)
+library(dust2)
+library(monty)
+```
 
 # Setting the scene
 
@@ -32,18 +36,18 @@ plot(cases ~ time, data, pch = 19, las = 1,
 
 The data here shows a classic epidemic, with cases rising up to some peak and falling.  We will try fitting this with a simple compartmental SIR (Susceptible-Infected-Recovered) model, which we will write here in odin2.  There are a number of possible ways of writing this, but here we'll go for a stochastic discrete-time version, mostly because it will allow us to demonstrate a number of features of `odin2`, `dust2` and `monty` (and because the ODE version is not yet written).
 
-Before fitting the data, we'll write out a model that captures the core ideas (this is replicated from `vignette("odin2")`)
+Before fitting the data, we'll write out a model that captures the core ideas (this is replicated from `vignette("odin2")`), but with an equation for `incidence` added (the number of new infections over one time unit).
 
 ```{r}
-sir <- odin2::odin({
+sir <- odin({
   initial(S) <- N - I0
   initial(I) <- I0
   initial(R) <- 0
-  initial(incidence) <- 0
+  initial(incidence, zero_every = 1) <- 0
   update(S) <- S - n_SI
   update(I) <- I + n_SI - n_IR
   update(R) <- R + n_IR
-  update(incidence) <- if (time %% 1 == 0) n_SI else incidence + n_SI
+  update(incidence) <- incidence + n_SI
   n_SI <- Binomial(S, p_SI)
   n_IR <- Binomial(I, p_IR)
   p_SI <- 1 - exp(-beta * I / N * dt)
@@ -59,16 +63,17 @@ We can initialise this system and simulate it out over this time series and plot
 
 ```{r}
 pars <- list(beta = 0.3, gamma = 0.1, I0 = 5)
-sys <- dust2::dust_system_create(sir(), pars, n_particles = 20, dt = 0.25)
-dust2::dust_system_set_state_initial(sys)
+sys <- dust_system_create(sir(), pars, n_particles = 20, dt = 0.25)
+dust_system_set_state_initial(sys)
 time <- 0:100
-y <- dust2::dust_system_simulate(sys, time)
+y <- dust_system_simulate(sys, time)
 ```
 
-The `dust2::dust_system_simulate` function returns an `n_state` by `n_particle` by `n_time` matrix (here, 4 x 20 x 101).  We're interested in incidence (the fourth row here), and extracting that gives us a 20 x 101 matrix, which we'll transpose in order to plot it:
+The `dust_system_simulate()` function returns an `n_state` by `n_particle` by `n_time` matrix (here, 4 x 20 x 101).  We're interested in incidence, and extracting that gives us a 20 x 101 matrix, which we'll transpose in order to plot it:
 
 ```{r}
-matplot(time, t(y[4, , ]), type = "l", lty = 1, col = "#00000055",
+incidence <- dust_unpack_state(sys, y)$incidence
+matplot(time, t(incidence), type = "l", lty = 1, col = "#00000055",
         xlab = "Time (days)", ylab = "Cases", las = 1)
 points(cases ~ time, data, pch = 19, col = "red")
 ```
@@ -88,15 +93,15 @@ Here, we'll use a [Poisson](https://en.wikipedia.org/wiki/Poisson_distribution) 
 The syntax for this looks a bit different to the odin code above:
 
 ```{r}
-sir <- odin2::odin({
+sir <- odin({
   initial(S) <- N - I0
   initial(I) <- I0
   initial(R) <- 0
-  initial(incidence) <- 0
+  initial(incidence, zero_every = 1) <- 0
   update(S) <- S - n_SI
   update(I) <- I + n_SI - n_IR
   update(R) <- R + n_IR
-  update(incidence) <- if (time %% 1 == 0) n_SI else incidence + n_SI
+  update(incidence) <- incidence + n_SI
   n_SI <- Binomial(S, p_SI)
   n_IR <- Binomial(I, p_IR)
   p_SI <- 1 - exp(-beta * I / N * dt)
@@ -121,14 +126,14 @@ With this version of the model we can compute likelihoods with `dust2`'s machine
 Our system is **stochastic**; each particle will produce a different trajectory and from that a different likelihood.  Each time we run the system we get a different combination of likelihoods.  We can use a **particle filter** to generate an estimate of the marginal likelihood, averaging over this stochasticity.  This works by resampling the particles at each point along the time series, according to how likely they are.
 
 ```{r}
-filter <- dust2::dust_filter_create(sir(), 0, data, n_particles = 200)
+filter <- dust_filter_create(sir(), 0, data, n_particles = 200)
 ```
 
 Each time we run this filter the likelihood will be slightly (or very) different:
 
 ```{r}
-dust2::dust_likelihood_run(filter, pars)
-dust2::dust_likelihood_run(filter, pars)
+dust_likelihood_run(filter, pars)
+dust_likelihood_run(filter, pars)
 ```
 
 If you run the filter enough times a distribution will emerge of course.  Let's compare two points in parameter space, varying the `beta` parameter and running the filter 100 times each:
@@ -136,8 +141,8 @@ If you run the filter enough times a distribution will emerge of course.  Let's 
 ```{r}
 pars1 <- modifyList(pars, list(beta = 0.25))
 pars2 <- modifyList(pars, list(beta = 0.23))
-ll1 <- replicate(100, dust2::dust_likelihood_run(filter, pars1))
-ll2 <- replicate(100, dust2::dust_likelihood_run(filter, pars2))
+ll1 <- replicate(100, dust_likelihood_run(filter, pars1))
+ll2 <- replicate(100, dust_likelihood_run(filter, pars2))
 
 xb <- seq(floor(min(ll1, ll2)), ceiling(max(ll1, ll2)), by = 1)
 hist(ll2, breaks = xb, col = "#0000ff99", freq = FALSE,
@@ -151,13 +156,14 @@ So even a relatively small difference in a parameter leads to a difference in th
 If you run a particle filter with the argument `save_trajectories = TRUE` then we save the trajectories of particles over time:
 
 ```{r}
-dust2::dust_likelihood_run(filter, list(beta = 0.2, gamma = 0.1), save_trajectories = TRUE)
+dust_likelihood_run(filter, list(beta = 0.2, gamma = 0.1),
+                    save_trajectories = TRUE)
 ```
 
-You can access these with `dust2::dust_likelihood_last_trajectories()`:
+You can access these with `dust_likelihood_last_trajectories()`:
 
 ```{r}
-h <- dust2::dust_likelihood_last_trajectories(filter)
+h <- dust_likelihood_last_trajectories(filter)
 ```
 
 The result here is a 4 x 100 x 200 array:
@@ -172,10 +178,11 @@ The dimensions represent, in turn:
 2. 200 particles
 3. 100 time steps (corresponding to the data)
 
-Considering just the fourth state, representing incidence, and plotting over time, you may be able to make out the tree structure of the trajectories, with fewer distinct traces at the start of the time series, and some traces more heavily represented in the final sample than others:
+Considering just incidence, and plotting over time, you may be able to make out the tree structure of the trajectories, with fewer distinct traces at the start of the time series, and some traces more heavily represented in the final sample than others:
 
 ```{r}
-matplot(t(h[4, , ]), type = "l", lty = 1, col = "#00000022")
+incidence <- dust_unpack_state(sys, h)$incidence
+matplot(t(incidence), type = "l", lty = 1, col = "#00000022")
 points(cases ~ time, data, pch = 19, col = "red")
 ```
 
@@ -184,7 +191,7 @@ points(cases ~ time, data, pch = 19, col = "red")
 We can use MCMC to explore this model, but to do this we will need a prior.  We'll use [monty's DSL](https://mrc-ide.github.io/monty/articles/dsl.html) to create one; this looks similar to the odin code above:
 
 ```{r}
-prior <- monty::monty_dsl({
+prior <- monty_dsl({
   beta ~ Exponential(mean = 0.3)
   gamma ~ Exponential(mean = 0.1)
 })
@@ -192,10 +199,10 @@ prior <- monty::monty_dsl({
 
 Here we define a prior that covers `beta` and `gamma`, two of the three input parameters to our odin model.  This prior is a `monty_model` object, which we can use to sample from, compute log densities with (to compute the prior), etc.
 
-We also need to adapt our `dust2` filter object above for use with `monty`.  All we need to do here is to describe how a vector of statistical parameters (here `beta` and `gamma`) will be converted into the inputs that the `sir` system needs to run (here a list with elements `beta`, `gamma` and `I0`).  We do this with a `monty::monty_packer` object:
+We also need to adapt our `dust2` filter object above for use with `monty`.  All we need to do here is to describe how a vector of statistical parameters (here `beta` and `gamma`) will be converted into the inputs that the `sir` system needs to run (here a list with elements `beta`, `gamma` and `I0`).  We do this with a `monty_packer` object:
 
 ```{r}
-sir_packer <- monty::monty_packer(c("beta", "gamma"), fixed = list(I0 = 5))
+sir_packer <- monty_packer(c("beta", "gamma"), fixed = list(I0 = 5))
 ```
 
 With this packer we can convert from a **list** of name-value pairs suitable for initialising a `dust2` system into a **vector** of parameters suitable for use with `monty`:
@@ -213,7 +220,7 @@ sir_packer$unpack(c(0.3, 0.1))
 Combining the filter and packer we create a `monty` model, which we'll call `likelihood`, as that's what it represents:
 
 ```{r}
-likelihood <- dust2::dust_likelihood_monty(filter, sir_packer)
+likelihood <- dust_likelihood_monty(filter, sir_packer)
 ```
 
 This likelihood is now also a `monty_model` object:
@@ -222,13 +229,13 @@ This likelihood is now also a `monty_model` object:
 likelihood
 ```
 
-The `monty` package provides a high-level interface for working with these objects.  For example, to compute the likelihood we could now use `monty::monty_model_density()`:
+The `monty` package provides a high-level interface for working with these objects.  For example, to compute the likelihood we could now use `monty_model_density()`:
 
 ```{r}
-monty::monty_model_density(likelihood, c(0.2, 0.1))
+monty_model_density(likelihood, c(0.2, 0.1))
 ```
 
-The difference to using `dust2::dust_likelihood_run` here is now we provide a parameter vector from our *statistical model*, rather than the inputs to the odin/dust model.  This conforms to the interface that `monty` uses and lets us run things like MCMC.
+The difference to using `dust_likelihood_run` here is now we provide a parameter vector from our *statistical model*, rather than the inputs to the odin/dust model.  This conforms to the interface that `monty` uses and lets us run things like MCMC.
 
 We can combine the prior and the likelihood to create a posterior:
 
@@ -239,14 +246,14 @@ posterior <- prior + likelihood
 The last ingredient required for running an MCMC is a sampler.  We don't have much choice with a model where the likelihood is stochastic, we'll need to run a simple random walk. However, for this we still need a proposal matrix (the variance covariance matrix that is the parameter for a multivariate Gaussian - we'll draw new positions from this).  In an ideal world, this distribution will have a similar shape to the target distribution (the posterior) as this will help with mixing.  To get started, we'll use an uncorrelated random walk with each parameter having a fairly wide variance of 0.02
 
 ```{r}
-sampler <- monty::monty_sampler_random_walk(diag(2) * 0.02)
+sampler <- monty_sampler_random_walk(diag(2) * 0.02)
 ```
 
 We can now run an MCMC for 100 samples
 
 ```{r}
-samples <- monty::monty_sample(posterior, sampler, 100,
-                               initial = sir_packer$pack(pars))
+samples <- monty_sample(posterior, sampler, 100,
+                        initial = sir_packer$pack(pars))
 ```
 
 We need to develop nice tools for working with the outputs of the sampler, but for now bear with some grubby base R manipulation.
@@ -276,11 +283,11 @@ There are several things we can do here to improve how this chain mixes
 Here, we apply most of these suggestions at once, using a variance-covariance matrix [that I prepared earlier](https://www.youtube.com/watch?v=ziqD1xvSpF4):
 
 ```{r}
-filter <- dust2::dust_unfilter_create(sir(), 0, data, n_particles = 1000)
-likelihood <- dust2::dust_likelihood_monty(filter, sir_packer)
+filter <- dust_unfilter_create(sir(), 0, data, n_particles = 1000)
+likelihood <- dust_likelihood_monty(filter, sir_packer)
 vcv <- matrix(c(0.0005, 0.0003, 0.0003, 0.0003), 2, 2)
-sampler <- monty::monty_sampler_random_walk(vcv)
-samples <- monty::monty_sample(posterior, sampler, 1000,
+sampler <- monty_sampler_random_walk(vcv)
+samples <- monty_sample(posterior, sampler, 1000,
                                initial = sir_packer$pack(pars))
 ```
 
@@ -325,23 +332,23 @@ Obviously, this approximation comes with costs though:
 To create a deterministic "filter" (currently, and temporarily called an "unfilter"), use `dust_unfilter_create()` in place of `dust_filter_create`.  This will replace all calls to stochastic functions with their expectations at the point of call.
 
 ```{r}
-unfilter <- dust2::dust_unfilter_create(sir(), 0, data)
+unfilter <- dust_unfilter_create(sir(), 0, data)
 ```
 
 In contrast with `filter`, above, multiple calls to `unfilter` with the same parameter set yield the same result.
 
 ```{r}
-dust2::dust_likelihood_run(unfilter, pars)
-dust2::dust_likelihood_run(unfilter, pars)
+dust_likelihood_run(unfilter, pars)
+dust_likelihood_run(unfilter, pars)
 ```
 
 We can now proceed as before, reusing our `packer`, `prior` and `sampler` objects, which are still useable here:
 
 ```{r}
-likelihood_det <- dust2::dust_likelihood_monty(unfilter, sir_packer)
+likelihood_det <- dust_likelihood_monty(unfilter, sir_packer)
 posterior_det <- prior + likelihood_det
-samples_det <- monty::monty_sample(posterior_det, sampler, 1000,
-                                   initial = sir_packer$pack(pars))
+samples_det <- monty_sample(posterior_det, sampler, 1000,
+                            initial = sir_packer$pack(pars))
 ```
 
 Here, you can see the 1000 samples from the deterministic model (in blue) overlaid on top of the samples from the stochastic model (in grey):
@@ -362,11 +369,11 @@ sir <- odin2::odin({
   initial(S) <- N - I0
   initial(I) <- I0
   initial(R) <- 0
-  initial(incidence) <- 0
+  initial(incidence, zero_every = 1) <- 0
   update(S) <- S - n_SI
   update(I) <- I + n_SI - n_IR
   update(R) <- R + n_IR
-  update(incidence) <- if (time %% 1 == 0) n_SI else incidence + n_SI
+  update(incidence) <- incidence + n_SI
   n_SI <- Binomial(S, p_SI)
   n_IR <- Binomial(I, p_IR)
   p_SI <- 1 - exp(-beta * I / N * dt)
@@ -384,33 +391,33 @@ sir <- odin2::odin({
 
 This the same model as above, except for the definition of `beta` and `gamma`, which now contain the argument `derivative = TRUE`.
 
-This system can be used as a stochastic model (created via `dust2::dust_filter_create`) just as before.  The only difference is where the model is created using `dust2::dust_unfilter_create()`.
+This system can be used as a stochastic model (created via `dust_filter_create`) just as before.  The only difference is where the model is created using `dust_unfilter_create()`.
 
 ```{r}
-unfilter <- dust2::dust_unfilter_create(sir(), 0, data)
+unfilter <- dust_unfilter_create(sir(), 0, data)
 ```
 
 When you run the unfilter, you can now provide the argument `adjoint = TRUE` which will enable use of `dust_likelihood_last_gradient()` (we may make this the default in future).
 
 ```{r}
-dust2::dust_likelihood_run(unfilter, pars, adjoint = TRUE)
-dust2::dust_likelihood_last_gradient(unfilter)
+dust_likelihood_run(unfilter, pars, adjoint = TRUE)
+dust_likelihood_last_gradient(unfilter)
 ```
 
 We can create a `monty` model with this, as before:
 
 ```{r}
-likelihood <- dust2::dust_likelihood_monty(unfilter, sir_packer)
+likelihood <- dust_likelihood_monty(unfilter, sir_packer)
 likelihood
 ```
 
 and this model advertises that it can compute gradients now!
 
-So from `monty` we can use `monty::monty_model_density()` and `monty::monty_model_gradient()` to compute log-likelihoods and gradients.
+So from `monty` we can use `monty_model_density()` and `monty_model_gradient()` to compute log-likelihoods and gradients.
 
 ```{r}
-monty::monty_model_density(likelihood, c(0.2, 0.1))
-monty::monty_model_gradient(likelihood, c(0.2, 0.1))
+monty_model_density(likelihood, c(0.2, 0.1))
+monty_model_gradient(likelihood, c(0.2, 0.1))
 ```
 
 Because the prior contained gradient information, a posterior created with this version of the model also has gradients:
@@ -420,7 +427,7 @@ posterior <- likelihood + prior
 posterior
 ```
 
-With a model configured this way, you can use the [Hamiltonian Monte Carlo](https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo) method with `monty::monty_sampler_hmc()`, which can be far more efficient than a random walk once tuned.
+With a model configured this way, you can use the [Hamiltonian Monte Carlo](https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo) method with `monty_sampler_hmc()`, which can be far more efficient than a random walk once tuned.
 
 **WARNING**: Using `derivative = TRUE` on some parameters has the effect of making the rest use `constant = TRUE`.  We will describe the effects of this in a vignette on differentiable models, soon.
 
@@ -443,11 +450,11 @@ Here is a simple case with two parameter sets that differ in `beta`, each run wi
 ```{r}
 pars2 <- list(list(beta = 0.3, gamma = 0.1, I0 = 5),
               list(beta = 0.2, gamma = 0.1, I0 = 5))
-sys <- dust2::dust_system_create(sir(), pars2, n_particles = 20, n_groups = 2,
+sys <- dust_system_create(sir(), pars2, n_particles = 20, n_groups = 2,
                                  dt = 0.25)
-dust2::dust_system_set_state_initial(sys)
+dust_system_set_state_initial(sys)
 time <- 0:100
-y <- dust2::dust_system_simulate(sys, time)
+y <- dust_system_simulate(sys, time)
 ```
 
 The dimensions of `y` is now
@@ -500,16 +507,16 @@ plot(cases ~ time, data2, subset = group == 2, pch = 19, col = "red",
 points(cases ~ time, data2, subset = group == 1, pch = 19, col = "blue")
 ```
 
-Because the data is grouped, we don't need to tell `dust2::dust_filter_create()` that we have two groups, though you can pass `n_groups = 2` here if you want, which will validate that you really do have exactly two groups in the data:
+Because the data is grouped, we don't need to tell `dust_filter_create()` that we have two groups, though you can pass `n_groups = 2` here if you want, which will validate that you really do have exactly two groups in the data:
 
 ```{r}
-filter2 <- dust2::dust_filter_create(sir(), 0, data2, n_particles = 200)
+filter2 <- dust_filter_create(sir(), 0, data2, n_particles = 200)
 ```
 
-When passing parameters into the filter, you now should mirror the format used in `dust2::dust_system_run()`; a list of lists:
+When passing parameters into the filter, you now should mirror the format used in `dust_system_run()`; a list of lists:
 
 ```{r}
-dust2::dust_likelihood_run(filter2, pars2)
+dust_likelihood_run(filter2, pars2)
 ```
 
 We now have two likelihoods returned by the filter; one per group.
@@ -517,14 +524,14 @@ We now have two likelihoods returned by the filter; one per group.
 For the deterministic unfilter the process is the same:
 
 ```{r}
-unfilter2 <- dust2::dust_unfilter_create(sir(), 0, data2)
-dust2::dust_likelihood_run(unfilter2, pars2)
+unfilter2 <- dust_unfilter_create(sir(), 0, data2)
+dust_likelihood_run(unfilter2, pars2)
 ```
 
 however, our gradient has picked up a dimension:
 
 ```{r}
-dust2::dust_likelihood_last_gradient(unfilter2)
+dust_likelihood_last_gradient(unfilter2)
 ```
 
 Here, the first **column** is the gradient of the first parameter set, and the first **row** is the gradient of `beta` over parameter sets.
@@ -532,8 +539,8 @@ Here, the first **column** is the gradient of the first parameter set, and the f
 Compare with the single parameter case:
 
 ```{r}
-dust2::dust_likelihood_run(unfilter, pars2[[1]])
-dust2::dust_likelihood_last_gradient(unfilter)
+dust_likelihood_run(unfilter, pars2[[1]])
+dust_likelihood_last_gradient(unfilter)
 ```
 
 ## For monty models
@@ -546,13 +553,13 @@ head(data2)
 ```
 
 ```{r}
-filter2 <- dust2::dust_filter_create(sir(), 0, data2, n_particles = 200)
+filter2 <- dust_filter_create(sir(), 0, data2, n_particles = 200)
 ```
 
-Here, you would use a `monty::monty_packer_grouped` object rather than a packer, to represent grouped structure.  Here, we create a packer for our two groups for the two parameters (`beta` and `gamma`), indicating that `gamma` is shared between groups and using a fixed `I0` of 5 across both groups:
+Here, you would use a `monty_packer_grouped` object rather than a packer, to represent grouped structure.  Here, we create a packer for our two groups for the two parameters (`beta` and `gamma`), indicating that `gamma` is shared between groups and using a fixed `I0` of 5 across both groups:
 
 ```{r}
-packer2 <- monty::monty_packer_grouped(groups = c("a", "b"),
+packer2 <- monty_packer_grouped(groups = c("a", "b"),
                                        scalar = c("beta", "gamma"),
                                        shared = "gamma",
                                        fixed = list(I0 = 5))
@@ -569,8 +576,8 @@ packer2$unpack(p)
 Now, we can build the likelihood:
 
 ```{r}
-likelihood2 <- dust2::dust_likelihood_monty(filter2, packer2)
-monty::monty_model_density(likelihood2, p)
+likelihood2 <- dust_likelihood_monty(filter2, packer2)
+monty_model_density(likelihood2, p)
 ```
 
 # Further reading
